Make 'binary' tarballs smaller by stripping out *.pyc.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3908 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/SOAPpy/Makefile
+++ b/external/SOAPpy/Makefile
@@ -31,6 +31,7 @@ expand: SOAPpy-$(VERSION)-expanded
 
 snap: 
 	cd $(BUILD_ROOT); \
+	find $(SNAP)/$(SITE)/SOAPpy -name "*.pyc" | xargs rm -f; \
         tar -cvzf $(SOAPPY)/soappy-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/$(SITE)/SOAPpy; \
 	$(MD5) $(SOAPPY)/soappy-$(SNAP)-$(RELVER).tar.gz > $(SOAPPY)/soappy-$(SNAP)-$(RELVER).tar.gz.md5
