--- a/external/epydoc/Makefile
+++ b/external/epydoc/Makefile
@@ -34,6 +34,7 @@ expand: epydoc-$(VERSION)-expanded
 
 snap: 
 	cd $(BUILD_ROOT); \
+	find $(SNAP)/$(SITE)/epydoc -name "*.pyc" | xargs rm -f; \
         tar -cvzf $(EPYDOC)/epydoc-$(SNAP)-$(RELVER).tar.gz \
 		$(SNAP)/$(SITE)/epydoc \
 		--exclude test; \
