--- a/external/python/Makefile
+++ b/external/python/Makefile
@@ -140,6 +140,7 @@ clean:
 
 snap: 
 	cd $(BUILD_ROOT); \
+	find $(SNAP)/$(SITE)/libs -name "*.pyc" | xargs rm -f; \
         tar -cvzf $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/bin/python*.* $(SNAP)/bin/libs \
                   $(SNAP)/bin/DLLs $(SNAP)/bin/Include $(SNAP)/bin/Lib \
@@ -164,6 +165,7 @@ build: expand apply
 
 snap: 
 	cd $(BUILD_ROOT); \
+	find $(SNAP)/Library/Frameworks/Python.framework -name "*.pyc" | xargs rm -f; \
         tar -cvzf $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/Library/Frameworks/Python.framework \
             --exclude site-packages \
@@ -199,6 +201,7 @@ build: expand bzip2-$(BZIP2VERSION)/libbz2.a apply
 
 snap: 
 	cd $(BUILD_ROOT); \
+	find $(SNAP)/lib/python*/ -name "*.pyc" | xargs rm -f; \
         tar -cvzf $(PYTHON)/python-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/bin/idle $(SNAP)/bin/python* \
                   $(SNAP)/lib/python* \
