--- a/internal/chandlerdb/Makefile
+++ b/internal/chandlerdb/Makefile
@@ -30,6 +30,7 @@ upload: chandlerdb-$(SNAP)-$(RELVER).tar.gz
 
 snap: 
 	cd $(BUILD_ROOT); \
+	find $(MANIFEST) -name "*.pyc" | xargs rm -f; \
         tar -cvzf $(CHANDLERDB)/chandlerdb-$(SNAP)-$(RELVER).tar.gz $(MANIFEST)
 	$(MD5) chandlerdb-$(SNAP)-$(RELVER).tar.gz > chandlerdb-$(SNAP)-$(RELVER).tar.gz.md5
 
