Clean *.pyo files as well from 'binary' tarballs. Python-only tarballs can be about 70% smaller now, which makes builds go faster and saves some space.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3919 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/egenix-mx/Makefile
+++ b/external/egenix-mx/Makefile
@@ -32,6 +32,7 @@ expand: egenix-mx-base-$(VERSION)-expanded
 snap: 
 	cd $(BUILD_ROOT); \
 	find $(SNAP)/$(SITE)/mx -name "*.pyc" | xargs rm -f; \
+	find $(SNAP)/$(SITE)/mx -name "*.pyo" | xargs rm -f; \
         tar -cvzf $(EGENIX)/egenix-mx-base-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/$(SITE)/mx \
             --exclude Examples; \
