--- a/external/zope/Makefile
+++ b/external/zope/Makefile
@@ -31,6 +31,7 @@ expand: ZopeInterface-$(VERSION)-expanded
 snap: 
 	cd $(BUILD_ROOT); \
 	find $(SNAP)/$(SITE)/zope -name "*.pyc" | xargs rm -f; \
+	find $(SNAP)/$(SITE)/zope -name "*.pyo" | xargs rm -f; \
 	tar -cvzf $(ZOPE)/zopeinterface-$(SNAP)-$(RELVER).tar.gz \
 		$(SNAP)/$(SITE)/zope \
 		--exclude tests \
