--- a/internal/m2crypto/Makefile
+++ b/internal/m2crypto/Makefile
@@ -35,6 +35,7 @@ endif
 snap: 
 	cd $(BUILD_ROOT); \
 	find $(MANIFEST) -name "*.pyc" | xargs rm -f; \
+	find $(MANIFEST) -name "*.pyo" | xargs rm -f; \
 	tar -cvzf $(M2CRYPTO)/m2crypto-$(SNAP)-$(RELVER).tar.gz $(MANIFEST)
 	$(MD5) m2crypto-$(SNAP)-$(RELVER).tar.gz > m2crypto-$(SNAP)-$(RELVER).tar.gz.md5
 
