--- a/internal/wxPython-2.5/Makefile
+++ b/internal/wxPython-2.5/Makefile
@@ -48,7 +48,8 @@ clean:
 
 cleanmanifest:
 	cd $(BUILD_ROOT); \
-	find $(MANIFEST) -name "*.pyc" | xargs rm -f
+	find $(MANIFEST) -name "*.pyc" | xargs rm -f; \
+	find $(MANIFEST) -name "*.pyo" | xargs rm -f
 
 else
 
@@ -81,7 +82,9 @@ MANIFEST=$(SNAP)/$(SITE)/wx \
 cleanmanifest:
 	cd $(BUILD_ROOT); \
 	find $(SNAP)/$(SITE)/wx -name "*.pyc" | xargs rm -f; \
-	find $(SNAP)/$(SITE)/wxPython -name "*.pyc" | xargs rm -f
+	find $(SNAP)/$(SITE)/wxPython -name "*.pyc" | xargs rm -f; \
+	find $(SNAP)/$(SITE)/wx -name "*.pyo" | xargs rm -f; \
+	find $(SNAP)/$(SITE)/wxPython -name "*.pyo" | xargs rm -f
 
 else
 
@@ -114,7 +117,9 @@ MANIFEST=$(SNAP)/$(SITE)/wx \
 cleanmanifest:
 	cd $(BUILD_ROOT); \
 	find $(SNAP)/$(SITE)/wx -name "*.pyc" | xargs rm -f; \
-	find $(SNAP)/$(SITE)/wxPython -name "*.pyc" | xargs rm -f
+	find $(SNAP)/$(SITE)/wxPython -name "*.pyc" | xargs rm -f; \
+	find $(SNAP)/$(SITE)/wx -name "*.pyo" | xargs rm -f; \
+	find $(SNAP)/$(SITE)/wxPython -name "*.pyo" | xargs rm -f
 
 endif
 
