--- a/external/pychecker/Makefile
+++ b/external/pychecker/Makefile
@@ -39,6 +39,7 @@ expand: pychecker-$(VERSION)-expanded
 snap: 
 	cd $(BUILD_ROOT); \
 	find $(SNAP)/$(SITE)/pychecker -name "*.pyc" | xargs rm -f; \
+	find $(SNAP)/$(SITE)/pychecker -name "*.pyo" | xargs rm -f; \
         tar -cvzf $(PYCHECKER)/pychecker-$(SNAP)-$(RELVER).tar.gz \
                   $(SNAP)/$(SITE)/pychecker \
                   $(SNAP)/$(BIN)/pychecker*; \
