Part of solution to bug 1453, uploadworld target simplifies Tinderbox client scripts.
git-svn-id: http://svn.osafoundation.org/chandler/trunk@3941 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -67,6 +67,9 @@ upload:
 		$(MAKE) -C $$system DEBUG=$(DEBUG) upload; \
 	done
 
+uploadworld: upload
+	make -C ../internal DEBUG=$(DEBUG) upload
+
 install:
 	@for system in $(SYSTEMS); \
 	do \
